# foxeye

./: .gitignore  .gitlab-ci.yml  AUTHORS  BUGS  COPYING  ChangeLog  Makefile.am  Makefile.cvs  Makefile.cvs.burka  Makefile.git  Makefile.in  NEWS  README  acconfig.h.in  acinclude.m4  aclocal.m4  blist2h  config.cache  config.h  config.h.in  config.status  configure  configure.ac.head  configure.ac.tail  configure.in  configure.in.head  configure.in.tail  foxeye.pc.in  missing  mkinstalldirs
core/: Makefile.am  Makefile.in  accvs.blist  connchain.c  conversion.c  conversion.h  direct.c  direct.h  dispatcher.c  formats.default  foxeye.h.in  help.c  init.c  init.h  init.h.in  inlines.h  lib.c  list.c  list.h  main.c  modules.c  modules.h  protos.h  rwlock_init.c  rwlock_init.h  sheduler.c  sheduler.h  socket.c  socket.h  users.c.funcs  wtmp.c  wtmp.h
debian/: changelog  control  copyright  foxeye-dev.docs  foxeye-dev.install  foxeye.install  foxeye.lintian-overrides  lintian-override  rules  watch
doc/: AUTHORS  HOWTO.bot  HOWTO.ircd  HOWTO.module  Makefile.am  Makefile.in  README.ru  foxeye.1  foxeye.1.in  foxeye.sgml  help.format  module.template.c  modules.api.in  tech.txt  userflag.txt
help/: Makefile.am  Makefile.in  main  set
intl/: Makefile.in
modules/: Makefile.in  Makefile.mods  Makefile.mods.in
modules/autolog/: accvs.POTFILES  autolog.c  autolog.help
modules/irc/: accvs.api  accvs.cfg  irc.c  irc.h  irc.help  msgs.c
modules/irc-channel/: accvs.POTFILES  accvs.api  accvs.cfg  chmanagement.c  irc-channel.c  irc-channel.h  irc-channel.help
modules/irc-ctcp/: accvs.POTFILES  accvs.api  accvs.m4  dcc.c  irc-ctcp.help
modules/ircd/: TODO  accvs.POTFILES  accvs.api  accvs.cfg  accvs.m4  channels.c  clients.c  example-config  example-listfile  ircd-connection-sequence.txt  ircd-interfaces.txt  ircd.c  ircd.h  ircd.help  ircd.ref  management.c  messages.c  numerics.h  queries.c  sendto.h  servers.c
modules/ircd-capab/: accvs.api  ircd-capab.c  ircd-capab.help
modules/ircd-rusnet/: accvs.POTFILES  accvs.cfg  accvs.m4  ircd-rusnet.help  ircd-rusnet.ref  rusnet.c
modules/logs/: logs.c  logs.help
modules/lua/: accvs.m4  lua.c  lua.help  lua.ref
modules/modes/: accvs.POTFILES  modes.c  modes.help
modules/openssl/: accvs.POTFILES  accvs.m4  openssl.c  openssl.help
modules/ssl/: accvs.m4  openssl.c  ssl.help
modules/syslog/: accvs.POTFILES  syslog.c  syslog.help
modules/tcl/: accvs.POTFILES  accvs.m4  modtcl.c  modtcl.h  tcl.help  tcl.ref
modules/ziplink/: accvs.cfg  accvs.m4  ziplink.c  ziplink.help
po/: LINGUAS  Makefile.in  Makevars  POTFILES  POTFILES.in  POTFILES.in.in  cat-id-tbl.c  es.po  foxeye.pot  nb_NO.po  pt.po  ru.gmo  ru.po  uk.po  zh_Hans.po
scripts/: CONTENTS  Makefile.am  Makefile.in  alltools.tcl  eggcompat.tcl
tree/: Makefile.am  Makefile.in  testtree.c  tree.c  tree.h
ui/: Makefile.am  README  ui.h
