## Process this file with automake to produce Makefile.in
## Use aclocal; automake --foreign

docdir = ${prefix}/share/doc/$(PACKAGE)-$(VERSION)

doc_DATA = help.format userflag.txt HOWTO.bot

man_MANS = foxeye.1

EXTRA_DIST = $(doc_DATA) tech.txt module.template.c modules.api README.ru \
	HOWTO.module
